--- a/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
@@ -1,5 +1,5 @@
 "Tela_Detail_Producao As screen.'phoneDetailViewLayout_ver3.0'":
-    BackgroundImage: =Transmissões_foto_bw
+    BackgroundImage: ='Transmissões_foto_bw'
     ImagePosition: =ImagePosition.Fill
 
     RectQuickActionBar2 As rectangle:
@@ -91,6 +91,7 @@
                 AutoHeight: =true
                 Color: =RGBA(0, 0, 0, 1)
                 Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -134,6 +135,7 @@
                 AutoHeight: =true
                 Color: =RGBA(0, 0, 0, 1)
                 Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -177,6 +179,7 @@
                 AutoHeight: =true
                 Color: =RGBA(0, 0, 0, 1)
                 Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -220,6 +223,7 @@
                 AutoHeight: =true
                 Color: =RGBA(0, 0, 0, 1)
                 Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -263,6 +267,7 @@
                 AutoHeight: =true
                 Color: =RGBA(0, 0, 0, 1)
                 Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -306,6 +311,7 @@
                 AutoHeight: =true
                 Color: =RGBA(0, 0, 0, 1)
                 Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -349,6 +355,7 @@
                 AutoHeight: =true
                 Color: =RGBA(0, 0, 0, 1)
                 Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
@@ -392,6 +399,7 @@
                 AutoHeight: =true
                 Color: =RGBA(0, 0, 0, 1)
                 Fill: =RGBA(230, 230, 230, 1)
+                FontWeight: =FontWeight.Bold
                 Height: =48
                 Size: =21
                 Text: =Parent.DisplayName
