--- a/Levantamento de Perdas/Src/Caixa_C%e2mbio_2914_prod.fx.yaml
+++ b/Levantamento de Perdas/Src/Caixa_C%e2mbio_2914_prod.fx.yaml
@@ -11,8 +11,15 @@ Caixa_Câmbio_2914_prod As screen:
         ZIndex: =1
 
     Btnmaq1 As button:
+        DisabledColor: =RGBA(0, 0, 0, 0)
+        DisabledFill: =RGBA(0, 0, 0, 0)
         Fill: =RGBA(0, 0, 0, 0)
-        Height: =96
+        Height: =106.5
+        HoverColor: =RGBA(0, 0, 0, 0)
+        HoverFill: |-
+            =RGBA(4, 114, 14, 0.9)
+            
+            //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
             =Set( varmaquina , "81500001");
             Set( varsetor , "Usinagem Caixa de cambio");
@@ -25,7 +32,7 @@ Caixa_Câmbio_2914_prod As screen:
         Text: =""
         Width: =78
         X: =18
-        Y: =180
+        Y: =177
         ZIndex: =2
 
     Label3 As label:
