--- a/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Detail_Producao.fx.yaml
@@ -1,5 +1,5 @@
 "Tela_Detail_Producao As screen.'phoneDetailViewLayout_ver3.0'":
-    BackgroundImage: ='Transmissões_foto_bw'
+    BackgroundImage: =Transmissões_foto_bw
     ImagePosition: =ImagePosition.Fill
 
     RectQuickActionBar2 As rectangle:
