--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -118,6 +118,9 @@
     "Tel_Edit_Producao",
     "Tel_Edit_Perdas",
     "Tela_acerto_levantamento",
-    "Caixa_Câmbio_2914_prod"
+    "Caixa_Câmbio_2914_prod",
+    "Tela_Ini_2911",
+    "Tela_Ini_2912",
+    "Tela_Ini_2913"
   ]
 }
