--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -385,7 +385,7 @@
                 IsSearchable: =false
                 Items: =Sort(Distinct( Filter(CreateMaquina, Text(DataCardsetor.Selected.Result) in SETOR , Text(DataCardute.Selected.Result) in UTE, Text(DataCardoperacao.Selected.Result) in OPERACAO) , CAF).Result , Result) //Distinct(CreateMaquina;CAF)
                 NoSelectionText: ="CAF Máquina - Somente Números"
-                OnChange: =Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , Cap_Produtiva - DataCardquantidade) ; Reset(DataCardquantidade) ; Set(varDelay,true) ; Reset(DataCardtipo_de_peca)
+                OnChange: =Set(varIDpai,  Value(DataCardute.Selected.Result) & Value(DataCardmaquina.Selected.Result) & DataCardcolaborador.Text & DataCarddata.SelectedDate & DataCardhora_inicio.Selected.Result) ; Set(varDelta , CardProd_Prev - DataCardquantidade) ; Reset(DataCardquantidade) ; Set(varDelay,true) ; Reset(DataCardtipo_de_peca)
                 SearchFields: =["Result"]
                 SearchItems: =[]
                 SelectMultiple: =false
@@ -682,7 +682,7 @@
                           Value(DataCardquantidade.Text) <> RoundDown(Value(DataCardquantidade.Text),0),
                               Notify("Favor digitar apenas o número do Registro");
                               Reset(DataCardquantidade)
-                    ); Set(varDelta , Cap_Produtiva - DataCardquantidade)
+                    ); Set(varDelta , CardProd_Prev - DataCardquantidade)
                 PaddingLeft: =5
                 RadiusBottomLeft: =0
                 RadiusBottomRight: =0
@@ -692,7 +692,7 @@
                 Tooltip: =Parent.DisplayName
                 VirtualKeyboardMode: =VirtualKeyboardMode.Numeric
                 Width: =150
-                X: =45
+                X: =30
                 Y: =86
                 ZIndex: =2
 
@@ -729,19 +729,25 @@
             Label_Prod_Realizada As label:
                 Align: =Align.Center
                 Color: =RGBA(255, 255, 255, 1)
-                Height: =86
+                Fill: =RGBA(204, 204, 204, 1)
+                FontWeight: =FontWeight.Bold
+                Height: =80
                 Size: =21
                 Text: ="Prod. Realizada"
-                X: =45
+                Width: =DataCardquantidade.Width
+                X: =DataCardquantidade.X
                 ZIndex: =5
 
             Label_Prod_Prevista As label:
                 Align: =Align.Center
                 Color: =RGBA(255, 255, 255, 1)
-                Height: =86
+                Fill: =RGBA(204, 204, 204, 1)
+                FontWeight: =FontWeight.Bold
+                Height: =80
                 Size: =21
                 Text: ="Prod. Prevista"
-                X: =258
+                Width: =DataCardquantidade.Width
+                X: =CardProd_Prev.X
                 ZIndex: =7
 
             CardProd_Delta As text:
@@ -753,7 +759,7 @@
                 DelayOutput: =true
                 DisplayMode: =DisplayMode.Disabled
                 Format: =TextFormat.Number
-                Height: =70
+                Height: =DataCardquantidade.Height
                 HintText: ="Insira a quantidade produzida"
                 MaxLength: =Parent.MaxLength
                 OnChange: =
@@ -765,19 +771,33 @@
                 Size: =21
                 TabIndex: =-1
                 Tooltip: =Parent.DisplayName
-                Width: =150
-                X: =466
-                Y: =86
+                Width: =DataCardquantidade.Width
+                X: =CardProd_Prev.X + CardProd_Prev.Width + 65
+                Y: =DataCardquantidade.Y
                 ZIndex: =8
 
             Label_Delta As label:
                 Align: =Align.Center
                 Color: =RGBA(255, 255, 255, 1)
-                Height: =86
+                Fill: =RGBA(204, 204, 204, 1)
+                FontWeight: =FontWeight.Bold
+                Height: =80
                 Size: =21
                 Text: ="Delta"
-                X: =466
+                Width: =DataCardquantidade.Width
+                X: =CardProd_Delta.X
                 ZIndex: =9
+
+            CardProd_Prev As text:
+                Align: =Align.Center
+                Default: =Last(Filter(CreateMaquina , (CAF = varmaquina))).CAPACIDADE
+                DisplayMode: =DisplayMode.Disabled
+                Height: =DataCardquantidade.Height
+                Size: =21
+                Width: =DataCardquantidade.Width
+                X: =DataCardquantidade.X + DataCardquantidade.Width + 65
+                Y: =DataCardquantidade.Y
+                ZIndex: =10
 
         ID_DataCard1 As typedDataCard.textualViewCard:
             BorderStyle: =BorderStyle.Solid
@@ -972,6 +992,7 @@
         Layout: =Layout.Vertical
         ShowScrollbar: =false
         TemplateSize: =103
+        Visible: =false
         Width: =187
         X: =223
         Y: =826
