--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -121,6 +121,7 @@
     "Caixa_Câmbio_2914_prod",
     "Tela_Ini_2911",
     "Tela_Ini_2912",
-    "Tela_Ini_2913"
+    "Tela_Ini_2913",
+    "Tela_Ini_2914"
   ]
 }
