--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -118,10 +118,11 @@
     "Tel_Edit_Producao",
     "Tel_Edit_Perdas",
     "Tela_acerto_levantamento",
-    "Caixa_Câmbio_2914_prod",
     "Tela_Ini_2911",
     "Tela_Ini_2912",
+    "Tela_Ini_2915",
     "Tela_Ini_2913",
-    "Tela_Ini_2914"
+    "Tela_Ini_2914",
+    "Caixa_Câmbio_2914"
   ]
 }
