--- a/Levantamento de Perdas/Src/Caixa_C%e2mbio_2914.fx.yaml
+++ b/Levantamento de Perdas/Src/Caixa_C%e2mbio_2914.fx.yaml
@@ -1,4 +1,4 @@
-Caixa_Câmbio_2914_prod As screen:
+Caixa_Câmbio_2914 As screen:
     BackgroundImage: =Transmissões_foto_bw
     ImagePosition: =ImagePosition.Fill
 
@@ -388,12 +388,29 @@ Caixa_Câmbio_2914_prod As screen:
         ZIndex: =18
 
     Label_Local As button:
+        Align: =Align.Left
         DisplayMode: =DisplayMode.View
         Height: =88
         Size: =24
         Text: ="Linha Caixa de Câmbio - UTE 2914"
-        Width: =600
+        Width: =622
         X: =18
         Y: =36
         ZIndex: =19
+
+    Icon1_8 As icon.Home:
+        BorderColor: =RGBA(255, 255, 255, 1)
+        Color: =RGBA(255, 255, 255, 1)
+        FocusedBorderThickness: =1
+        Height: =88
+        Icon: =Icon.Home
+        OnSelect: =Back()
+        PaddingBottom: =22
+        PaddingLeft: =22
+        PaddingRight: =22
+        PaddingTop: =22
+        Width: =80
+        X: =560
+        Y: =36
+        ZIndex: =20
 
