--- a/Levantamento de Perdas/Src/Tela_Ini_2914.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2914.fx.yaml
@@ -14,6 +14,7 @@ Tela_Ini_2914 As screen:
 
     Button2_37 As button:
         Height: =122
+        OnSelect: =Navigate(Caixa_Câmbio_2914)
         Size: =24
         Text: ="Linha Caixa de Câmbio"
         Width: =280
