--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -123,6 +123,7 @@
     "Tela_Ini_2915",
     "Tela_Ini_2913",
     "Tela_Ini_2914",
-    "Caixa_Câmbio_2914"
+    "Caixa_Câmbio_2914",
+    "Suporte_União_2914"
   ]
 }
